FIX interface - single thread for sending all ER; test scripts refactor and support latency rate; build gradle change to support build zip file with scripts